# Homework

./: README.md
Complier Class/C++单词拼装器/: README.md
Complier Class/C++单词拼装器/stable version/: CMakeLists.txt  README.md  key_word.txt  main.cpp  operator  ui_frame.cpp  ui_frame.h  word_exam.cpp  word_exam.h
Complier Class/C++单词拼装器/test version/: CMakeLists.txt  README.md  Test.cpp  WordsAssembler.ui  cmake_install.cmake  frame.ui  ui_WordsAssembler.h  ui_frame.cpp  ui_frame.h  word_exam.cpp  word_exam.h  高亮参考表.txt
Complier Class/XLEX-词法自动生成器/: READ ME.md  实验2 XLEX-词法自动生成器.txt
Complier Program/C++词法分析程序/: README.md
Complier Program/C++词法分析程序/test01gui/build-test01-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
Complier Program/C++词法分析程序/test01gui/test01/: example.tny  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  outTestCode.cpp  test.lex
Complier Program/XLEX Analyse Machine/: README.md
Complier Program/XLEX Analyse Machine/build-test01-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
Complier Program/XLEX Analyse Machine/miniCTest/: reRule.txt  test.lex  testMiniC.txt
Complier Program/XLEX Analyse Machine/test01/: example.tny  global.cpp  global.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  outMiniC.cpp  outTestCode.cpp  reRule.txt  test.lex  test01.pro
Computer Security?/: README.md
Computer Security?/S-Box/: CMakeLists.txt  README.md  gf.cpp  gf.h  other.cpp  s_box.cpp
Network Security/: README.md  test 1.md  test 2.md  test 3.md
